# model/request/Email.go
@@ -1,0 +1,6 @@
+package request
+
+type EmailInfo struct {
+	Recipient string `json:"recipient" binding:"email"`
+	URL       string `json:"url" binding:"url"`
+}
