# router/router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	"fmt"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 	"net/http"
@@ -16,8 +17,10 @@ func RunAppServer() {
 	version1 := global.ROUTER.Group("/api/v1")
 	version1.POST("/link", v1.Long2ShortURL)
 	version1.POST("/qrcode", v1.MakeQRCode)
+	version1.POST("/email", v1.SendEmail)
 	//这里只要把二维码的存放路径写进去即可，访问时传入图片名称即可获取图片
 	version1.StaticFS("/qrcode", http.Dir(qrcode.GetQRCodeFullPath()))
 
-	global.ROUTER.Run(global.AppConf.Port)
+	port := fmt.Sprintf(":%d", global.APPCONF.Port)
+	global.ROUTER.Run(port)
 }
